# hpx

./: .clang-tidy  .cmake-format.py  .codacy.yml  CMakeLists.txt  README.rst  modularize.py  replace_actions.py
.github/workflows/: build-and-test.yml  cff-validator.yml  check-circular-deps.yml  check-formatting.yml  check-module-cmakelists.yml  codeql.yml  configure-test-combination.yml  depreport.yml  documentation-build.yml  documentation-push.yml  inspect.yml  linux_crosscompile_arm_eve_sve_release.yml  linux_crosscompile_arm_sve_release.yml  linux_debug.yml  linux_debug_fetch_boost.yml  linux_debug_fetch_hwloc.yml  linux_debug_ittnotify.yml  linux_debug_likwid.yml  linux_debug_local_runtime.yml  linux_debug_modules.yml  linux_debug_tracy.yml  linux_hip.yml  linux_release_clang_p2996_reflection.yml  linux_release_fetchcontent.yml  linux_release_gcc_trunk_reflection.yml  linux_release_godbolt_minimal.yml  linux_release_modules.yml  linux_release_static.yml  linux_sanitizers.yml  linux_with_bench_test.yml  linux_with_nanobench_test.yml  macos_debug.yml  macos_debug_fetch_boost.yml  macos_debug_fetch_hwloc.yml  msvc_analysis.yml  sanity-check.yml  stale.yml  tests.examples.targets  windows_clang_debug.yml  windows_clang_release.yml  (+10 more)
.jenkins/lsu/: env-clang-18.sh  env-gcc-14.sh
cmake/: HPX_AddTest.cmake  HPX_CXXModules.cmake  HPX_CollectStdHeaders.cmake  HPX_GeneratePackage.cmake  HPX_SetupAllocator.cmake  HPX_SetupApex.cmake  HPX_SetupAsio.cmake  HPX_SetupGitHooks.cmake  HPX_SetupSYCL.cmake  HPX_SetupStdexec.cmake  HPX_SetupTarget.cmake  HPX_SetupTracing.cmake
cmake/templates/: conf.py.in  hpx.ixx.in  std_headers.hpp.in
cmake/tests/: cxx26_contracts.cpp
components/component_storage/: CMakeLists.txt
components/component_storage/src/: component_module.cpp  component_storage.cpp
components/containers/partitioned_vector/: CMakeLists.txt
components/iostreams/: CMakeLists.txt
components/process/: CMakeLists.txt
components/process/src/: process.cpp
docs/: CMakeLists.txt  reflect_action_migration.md
examples/: CMakeLists.txt
examples/async_io/: async_io_low_level.cpp
examples/cancelable_action/: CMakeLists.txt
examples/gtest_emulation/: CMakeLists.txt
examples/hello_world_component/: CMakeLists.txt
examples/itt_notify/: CMakeLists.txt  itt_notify_smoke.cpp
examples/quickstart/: CMakeLists.txt  customize_async.cpp  enumerate_threads.cpp  mutex_docs.cpp
examples/task_bench/: CMakeLists.txt
examples/tuplespace/: CMakeLists.txt
init/src/: manage_runtime.cpp
libs/: CMakeLists.txt
libs/core/tracy/tests/: CMakeLists.txt
libs/core/tracy/tests/unit/: CMakeLists.txt  compile_active_tracy.cpp
perf-baselines/: results-2026-07-05-keep_future-bridge-redesign-benchmark.md
tools/inspect/: include_check.cpp
wrap/src/: hpx_main.cpp  hpx_wrap.cpp
(+1301 files in other folders)
